--- a/video-upload-service/pom.xml
+++ b/video-upload-service/pom.xml
@@ -108,6 +108,10 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
