--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -34,6 +34,11 @@ spring:
             lb://video-play-service
           predicates:
             - Path=/video/play/**
+        - id: video-processing-service # 视频转码服务
+          uri:
+            lb://video-processing-service
+          predicates:
+            - Path=/video/processing/**
 logging:
   level:
     org.springframework.cloud.gateway: DEBUG
