完善发布视频逻辑

--- a/common-module/pom.xml
+++ b/common-module/pom.xml
@@ -58,6 +58,12 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
+        
+        <!-- OpenFeign依赖 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
 
     <artifactId>common-module</artifactId>
