新增一个自定义注解，便于获取当前用户ID

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -49,6 +49,11 @@ spring:
             lb://feed-service
           predicates:
             - Path=/feed/**
+        - id: like-favorite-service # 视频点赞/收藏服务
+          uri:
+            lb://like-favorite-service
+          predicates:
+            - Path=/like/**,/favorite/**
 logging:
   level:
     org.springframework.cloud.gateway: DEBUG
