实现简易的单点登录

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
           uri:
             lb://user-service
           predicates:
-            - Path=/user/**
+            - Path=/user/**,/auth/**
         - id: image-service # 图片服务
           uri:
             lb://image-service
