--- a/video-info-service/pom.xml
+++ b/video-info-service/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>common-module</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
